# GoIT_PyWeb_HW_4

./: docker-compose.yml  main.py  pyproject.toml
storage/: data.json
